# ronin

./: .gitignore  Anchor.toml  Cargo.toml  Makefile  README-SETUP.md  SETUP.md  env.example  foundry.toml  hardhat.config.ts  layerzero.config.ts  package.json
contracts/: RoninNftBridge.sol
contracts/mocks/: MockERC1155.sol
programs/ronin_nft_bridge/: Cargo.toml
programs/ronin_nft_bridge/src/: errors.rs  lib.rs  msg_codec.rs
programs/ronin_nft_bridge/src/instructions/: claim.rs  init_onft_adapter.rs  init_store.rs  lz_receive.rs  lz_receive_types.rs  mod.rs  quote_send.rs  quote_send_onft.rs  registry_init.rs  registry_set.rs  send.rs  send_onft.rs  set_peer_config.rs
programs/ronin_nft_bridge/src/state/: mod.rs  onft.rs  registry.rs
ronin-smart-contract/: .env.bak  .env.example  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  .solhint.json  .solhintignore  LICENSE  Makefile  README.md  env.example  foundry.toml  renovate.json  types.d.ts
ronin-smart-contract/script/: ArtUpgrade.s.sol  Deploy.sol  DeployTransformWithMocks.sol  MintAndApprove.s.sol
ronin-smart-contract/test/: ONFTSevenSevenBit.t.sol  ONFTSevenSevenBit.ts  RagnarokTransform.t.sol  RagnarokTransform.ts  SevenSevenBit.t.sol  SevenSevenBit.ts
tasks/: index.ts  utils.ts
tasks/common/: check1155.ts  config.get.ts  debug1155.ts  list1155.ts  oappGet.ts  seed1155.ts  send.ts  taskHelper.ts  types.ts  utils.ts  wire.ts
tasks/evm/: watchOnft.ts
tests/: .gitignore  context.ts  helpers.ts  jest.config.cjs  simple.spec.ts  tsconfig.json  utils.ts
(+55 files in other folders)
