[package]
name = "ronin_nft_bridge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ronin_nft_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["oapp/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
oapp = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "bug-token2022" }
utils = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "bug-token2022" }